# pybayts_detect

./: .buildinfo  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  authors.html  changelog.html  contributing.html  environment.yaml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_pocl.py  tox.ini  usage.html
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/reference/: index.doctree  pybayts.doctree
.github/workflows/: checks.yml  docs.yml
_sources/: usage.rst.txt
_sources/reference/: index.rst.txt
docs/: conf.py  installation.rst
docs/reference/: pybayts.rst
notebooks/: bayts_forest_nonforest_distributions.ipynb  compare_pybayts_with_Rbayts.ipynb  hls.ipynb  test_eval_pybayts.ipynb
pybayts/: __init__.py  __main__.py  bayts.py
pybayts/data/: io.py  qa.py  stack.py
reference/: index.html  pybayts.html
src/pybayts/: bayts.py  baytsDD.py  cli.py  createbayts.py  eval.py  pdf.py  plot.py  stats.py  test_stats.py
src/pybayts/data/: io.py  qa.py  stack.py
src/pybayts/eval/: eval.py
src/pybayts/tests/: test_stats.py
tests/: test_bayts.py  test_pdf.py  test_pybayts.py  test_stats.py
tests/baytsdata/: Hansen_GFC_2019_v17_lossyear_10S_070W_bayts_clip.tif  bayts_spatial_result.tif  detect_bayts.csv  lndvi_singlepixel.csv  pnf_test_s1vv.csv  s1vv_singlepixel.csv  single_deseasoned_ts_s1vv.csv  test_bayts.csv
tests/baytsdata/lndvi_tseries/: 2005-01-03-lndvi.tif  2005-01-19-lndvi.tif  2005-01-27-lndvi.tif  2005-02-04-lndvi.tif  2005-02-12-lndvi.tif  2005-02-20-lndvi.tif  2005-02-28-lndvi.tif  2005-03-08-lndvi.tif  2005-03-16-lndvi.tif  2005-03-24-lndvi.tif  2005-04-01-lndvi.tif  2005-05-03-lndvi.tif  2005-05-11-lndvi.tif  2005-05-19-lndvi.tif  2005-05-27-lndvi.tif  2005-06-04-lndvi.tif  2005-06-12-lndvi.tif  2005-06-28-lndvi.tif  2005-07-14-lndvi.tif  2005-07-30-lndvi.tif  2005-08-15-lndvi.tif  2005-08-23-lndvi.tif  2005-09-08-lndvi.tif  2005-09-16-lndvi.tif  2005-09-24-lndvi.tif  2005-10-02-lndvi.tif  2005-10-10-lndvi.tif  2005-11-03-lndvi.tif  2005-12-21-lndvi.tif  2006-01-06-lndvi.tif  2006-01-30-lndvi.tif  2006-02-07-lndvi.tif  2006-02-15-lndvi.tif  2006-04-12-lndvi.tif  2006-04-28-lndvi.tif  2006-05-14-lndvi.tif  2006-05-30-lndvi.tif  (+216 more)
(+183 files in other folders)
