[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybayts"
description = "A python port of R's bayts package based on Reiche 2015 and Reiche 2018."
readme = "README.rst"
requires-python = ">=3.9"
license = "LGPL-3.0-only"
keywords = []
authors = [
  { name = "Ryan Avery", email = "ryan@developmentseed.org" },
  { name = "Lilly Thomas", email = "lillythomas@developmentseed.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"rioxarray>=.0.3.1",
"seaborn>=0.11.1",
"geopandas>=0.9.0",
"geocube>=-0.0.16",
"iteration_utilities>=-0.11.0",
"scipy>=1.6.1",
"sklearn",
"tqdm",
"fire",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/developmentseed/pybayts#readme"
Issues = "https://github.com/developmentseed/pybayts/issues"
Source = "https://github.com/developmentseed/pybayts"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pybayts/__init__.py"

[tool.hatch.envs.default]
extra-dependencies = []

[tool.hatch.envs.default.scripts]
cov = "pytest"
no-cov = "cov --no-cov"

[tool.hatch.envs.test]
extra-dependencies = ["pytest", "pytest-cov", "pre-commit"]

[tool.hatch.envs.pybaytsnb]
post-install-commands = [
  "python -m ipykernel install --user --name=pybaytsnb",
  "echo 'Use this for better git diff for nbs: nbdime config-git --enable --global'",
  "echo 'Use this to view nb diffs when collabing on nbs: nbdiff-web [<commit> [<commit>]] [<path>]' ",
]
extra-dependencies = [
  "ipykernel",
  "nbdime",
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[[tool.hatch.envs.test.matrix]]
python = ["39"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["pybayts/__init__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.hatch.envs.docs]
detached = true # makes it so we don't install project dependencies from default env
dependencies = [
]
[tool.hatch.envs.docs.scripts]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
